# commandai

./: .gitignore  CLAUDE.md  EXAMPLES.md  PLAN.md  README.md  SECURITY_AUDIT.md  config.example.toml  install.ps1  install.sh  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
shell/: ai.ps1  ai.sh
src/command_ai/: __init__.py  __main__.py  cli.py  config.py  context.py  credentials.py  executor.py  llm.py  providers.py  search.py  ui.py
tests/: conftest.py  test_cli.py  test_config.py  test_context.py  test_credentials.py  test_docs.py  test_executor.py  test_integration.py  test_llm.py  test_providers.py  test_search.py  test_security.py  test_ui.py
